--- a/index.html
+++ b/index.html
@@ -1,48 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lil Abasto - Inicio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body class="body-general">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body class="body-general">
+    
     <header class="header-principal">
-        <div class="logo-contenedor">
-            <img src="Imagenes/Lil abasto log.jpeg" alt="Lil Abasto Logo" class="logo-imagen">
-            <span class="logo-texto">LIL ABASTO</span>
-        </div>
+      <div class="logo-contenedor">
+        <img
+          src="Imagenes/Lil abasto log.jpeg"
+          alt="Lil Abasto Logo"
+          class="logo-imagen"
+        />
+        <span class="logo-texto">LIL ABASTO</span>
+      </div>
     </header>
 
-    <nav class="nav-principal">
-        <div class="opciones-menu">
-            <button class="boton-menu">Locales</button>
-            <button class="boton-menu">Promociones</button>
-        </div>
-        <div class="buscador-contenedor">
-            <i class="fas fa-search icono-buscador"></i>
-        </div>
+    <nav id="NavBar">
+      <div class="opciones-menu">
+        <button class="boton-menu" data-seccion="novedades">Novedades</button>
+        <button class="boton-menu" data-seccion="promociones">Promociones</button>
+        <button class="boton-menu" data-seccion="mapa">Mapa</button>
+        <button class="boton-menu" data-seccion="locales">Locales</button>
+        <button class="boton-menu" data-seccion="servicios">Servicios</button>
+      </div>
+      <div class="buscador-contenedor">
+        <i class="fas fa-search icono-buscador"></i>
+      </div>
     </nav>
 
     <main class="main-contenido">
-        <div class="contenedor-fotos">
-            <div class="caja-foto">FOTO</div>
-            <div class="caja-foto">FOTO</div>
-        </div>
-        <div class="caja-descripcion">DESCRIPCIÓN</div>
+      <div class="contenedor-fotos">
+        <div class="caja-foto">FOTO</div>
+        <div class="caja-foto">FOTO</div>
+      </div>
+      <div class="caja-descripcion">DESCRIPCIÓN</div>
+
+      <div>
+        <h2 class="titulo-seccion" id="novedades">NOVEDADES</h2>
+        <div class="contenedor-novedades">
+          <div class="caja-novedad">NOVEDAD 1</div>
+          <div class="caja-novedad">NOVEDAD 2</div>
+          <div class="caja-novedad">NOVEDAD 3</div>
+      </div>
+
+      <div>
+        <h2 class="titulo-seccion" id="promociones">PROMOCIONES</h2>
+        <div class="contenedor-promociones">
+          <div class="caja-promocion">PROMOCIÓN 1</div>
+          <div class="caja-promocion">PROMOCIÓN 2</div>
+          <div class="caja-promocion">PROMOCIÓN 3</div>
+      </div>
+
+      <div>
+        <h2 class="titulo-seccion" id="mapa">MAPA DEL CENTRO COMERCIAL</h2>
+        <div class="contenedor-mapa">
+          <div class="caja-mapa">MAPA</div>
+      </div>
+
+      <div>
+        <h2 class="titulo-seccion" id="locales">LOCALES DESTACADOS</h2>
+        <div class="contenedor-locales">
+          <div class="caja-local">LOCAL 1</div>
+          <div class="caja-local">LOCAL 2</div>
+          <div class="caja-local">LOCAL 3</div>
+          <div class="caja-local">LOCAL 4</div>
+          <div class="caja-local">LOCAL 5</div>
+      </div>
+
+      <div>
+        <h2 class="titulo-seccion" id="servicios">SERVICIOS</h2>
+        <div class="contenedor-servicios">
+          <div class="caja-servicio">SERVICIO 1</div>
+          <div class="caja-servicio">SERVICIO 2</div>
+          <div class="caja-servicio">SERVICIO 3</div>
+      </div>
     </main>
 
     <footer class="footer-principal">
-        <div class="info-izquierda">
-            <p>Dirección / Teléfonos</p>
-            <p>Horarios</p>
-            <p class="derechos-reservados">Todos los derechos reservados</p>
-        </div>
-        <div class="info-derecha">
-            <p>COMO LLEGAR</p>
-            <p>CONTACTO</p>
-        </div>
+      <div class="info-izquierda">
+        <p>Dirección / Teléfonos</p>
+        <p>Horarios</p>
+        <p class="derechos-reservados">Todos los derechos reservados</p>
+      </div>
+      <div class="info-derecha">
+        <p>COMO LLEGAR</p>
+        <p>CONTACTO</p>
+      </div>
     </footer>
-</body>
+
+    <script src="index.js"></script>
+    </body>
 </html>
