--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lil Abasto - Inicio</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lunasima:wght@400;700&display=swap" rel="stylesheet">
+   </head>
 
   <body class="body-general">
     
     <header class="header-principal">
       <div class="logo-contenedor">
-        <img
-          src="Imagenes/Lil abasto log.jpeg"
-          alt="Lil Abasto Logo"
-          class="logo-imagen"
-        />
+        <img src="Imagenes/Lil abasto log.jpeg" alt="Lil Abasto Logo" class="logo-imagen"/>
         <span class="logo-texto">LIL ABASTO</span>
       </div>
     </header>
@@ -43,23 +42,53 @@
       <div>
         <h2 class="titulo-seccion" id="novedades">NOVEDADES</h2>
         <div class="contenedor-novedades">
-          <div class="caja-novedad">NOVEDAD 1</div>
-          <div class="caja-novedad">NOVEDAD 2</div>
-          <div class="caja-novedad">NOVEDAD 3</div>
+          <div class="caja-novedad">
+            <img src="" alt="Imagen de novedad 1">
+            <h3>Novedad 1</h3>
+            <p>Esta es la novedad 1, cuando sepas qué voy a ser modificame</p>
+          </div>
+          <div class="caja-novedad">
+            <h3>Novedad 2</h3>
+            <p>Esta es la novedad 2, cuando sepas qué voy a ser modificame</p>
+            <img src="" alt="Imagen de novedad 2">
+          </div>
       </div>
 
       <div>
         <h2 class="titulo-seccion" id="promociones">PROMOCIONES</h2>
         <div class="contenedor-promociones">
-          <div class="caja-promocion">PROMOCIÓN 1</div>
-          <div class="caja-promocion">PROMOCIÓN 2</div>
-          <div class="caja-promocion">PROMOCIÓN 3</div>
+          <div class="caja-promocion">
+            <img src="" alt="Logo del banco 1">
+            <h3>30% OFF</h3>
+            <p>Los miercoles en productos de Tecnologia</p>
+          </div>
+          <div class="caja-promocion">
+            <img src="" alt="Logo del banco 2">
+            <h3>3x2</h3>
+            <p>De lunes a viernes en Indumentaria</p>
+          </div>
+          <div class="caja-promocion">
+            <img src="" alt="Logo del banco 3">
+            <h3>15% OFF</h3>
+            <p>Sabados, domingos y feriados en Comercios seleccionados</p>
+          </div>
       </div>
 
       <div>
         <h2 class="titulo-seccion" id="mapa">MAPA DEL CENTRO COMERCIAL</h2>
         <div class="contenedor-mapa">
-          <div class="caja-mapa">MAPA</div>
+          <nav>
+            <ul class="lista-mapa">
+              <li><span>Subsuelo</span></li>
+              <li><span>Planta Baja</span></li>
+              <li><span>Primer Piso</span></li>
+            </ul>
+          </nav>
+          <div class="caja-mapa">
+            <img src="" alt="Imagen del Subsuelo">
+            <img src="" alt="Imagen de la Planta Baja">
+            <img src="" alt="Imagen del Primer Piso">
+          </div>
       </div>
 
       <div>
