--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lil Abasto - Inicio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lunasima:wght@400;700&display=swap" rel="stylesheet">
-   </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Lunasima:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
   <body class="body-general">
-    
     <header class="header-principal">
       <div class="logo-contenedor">
-        <img src="Imagenes/Lil abasto log.jpeg" alt="Lil Abasto Logo" class="logo-imagen"/>
+        <img
+          src="Imagenes/Lil abasto log.jpeg"
+          alt="Lil Abasto Logo"
+          class="logo-imagen"
+        />
         <span class="logo-texto">LIL ABASTO</span>
       </div>
     </header>
@@ -22,7 +28,9 @@
     <nav id="NavBar">
       <div class="opciones-menu">
         <button class="boton-menu" data-seccion="novedades">Novedades</button>
-        <button class="boton-menu" data-seccion="promociones">Promociones</button>
+        <button class="boton-menu" data-seccion="promociones">
+          Promociones
+        </button>
         <button class="boton-menu" data-seccion="mapa">Mapa</button>
         <button class="boton-menu" data-seccion="locales">Locales</button>
         <button class="boton-menu" data-seccion="servicios">Servicios</button>
@@ -43,35 +51,37 @@
         <h2 class="titulo-seccion" id="novedades">NOVEDADES</h2>
         <div class="contenedor-novedades">
           <div class="caja-novedad">
-            <img src="" alt="Imagen de novedad 1">
+            <img src="novedad1" alt="Imagen de novedad 1" />
             <h3>Novedad 1</h3>
             <p>Esta es la novedad 1, cuando sepas qué voy a ser modificame</p>
           </div>
           <div class="caja-novedad">
             <h3>Novedad 2</h3>
             <p>Esta es la novedad 2, cuando sepas qué voy a ser modificame</p>
-            <img src="" alt="Imagen de novedad 2">
+            <img src="novedad2" alt="Imagen de novedad 2" />
           </div>
+        </div>
       </div>
 
       <div>
         <h2 class="titulo-seccion" id="promociones">PROMOCIONES</h2>
         <div class="contenedor-promociones">
           <div class="caja-promocion">
-            <img src="" alt="Logo del banco 1">
+            <img src="banco1" alt="Logo del banco 1" />
             <h3>30% OFF</h3>
             <p>Los miercoles en productos de Tecnologia</p>
           </div>
           <div class="caja-promocion">
-            <img src="" alt="Logo del banco 2">
+            <img src="banco2" alt="Logo del banco 2" />
             <h3>3x2</h3>
             <p>De lunes a viernes en Indumentaria</p>
           </div>
           <div class="caja-promocion">
-            <img src="" alt="Logo del banco 3">
+            <img src="banco3" alt="Logo del banco 3" />
             <h3>15% OFF</h3>
             <p>Sabados, domingos y feriados en Comercios seleccionados</p>
           </div>
+        </div>
       </div>
 
       <div>
@@ -79,27 +89,102 @@
         <div class="contenedor-mapa">
           <nav>
             <ul class="lista-mapa">
-              <li><span>Subsuelo</span></li>
-              <li><span>Planta Baja</span></li>
-              <li><span>Primer Piso</span></li>
+              <li><span id="boton-subsuelo">Subsuelo</span></li>
+              <li><span id="boton-plantabaja">Planta Baja</span></li>
+              <li><span id="boton-primerpiso">Primer Piso</span></li>
             </ul>
           </nav>
           <div class="caja-mapa">
-            <img src="" alt="Imagen del Subsuelo">
-            <img src="" alt="Imagen de la Planta Baja">
-            <img src="" alt="Imagen del Primer Piso">
+            <img id="img-subsuelo" src="subsuelo" alt="Imagen del Subsuelo" />
+            <img
+              id="img-plantabaja"
+              src="plantabaja"
+              alt="Imagen de la Planta Baja"
+            />
+            <img
+              id="img-primerpiso"
+              src="pisouno"
+              alt="Imagen del Primer Piso"
+            />
           </div>
+        </div>
       </div>
 
-      <div>
-        <h2 class="titulo-seccion" id="locales">LOCALES DESTACADOS</h2>
-        <div class="contenedor-locales">
-          <div class="caja-local">LOCAL 1</div>
-          <div class="caja-local">LOCAL 2</div>
-          <div class="caja-local">LOCAL 3</div>
-          <div class="caja-local">LOCAL 4</div>
-          <div class="caja-local">LOCAL 5</div>
-      </div>
+      <section class="catalogo-locales">
+        <h2>LOCALES</h2>
+        <p>Hacé click en un piso para ver los locales disponibles</p>
+        <div class="category-list">
+          <details>
+            <summary>Planta Baja</summary>
+            <ul class="locales-lista">
+              <li>
+                <img src="imagen adidas" alt="Local Adidas" />
+                <p>
+                  <strong>Adidas</strong><br />
+                  Planta Baja - Local 230
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+              <li>
+                <img src="imagen urban style" alt="Local Urban Style" />
+                <p>
+                  <strong>Urban Style</strong><br />
+                  Planta Baja - Local 145
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+              <li>
+                <img src="images/camera-setup.jpg" alt="Sony A7 IV" />
+                <p>
+                  <strong>Sony A7 IV</strong><br />
+                  Autofoco avanzado y rendimiento excepcional
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+              <li>
+                <img src="images/camera-setup.jpg" alt="Fujifilm X-T5" />
+                <p>
+                  <strong>Fujifilm X-T5</strong><br />
+                  Ligera y potente cámara APS-C
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+            </ul>
+          </details>
+          <details>
+            <summary>Piso 1</summary>
+            <ul class="locales-lista">
+              <li>
+                <img src="images/premium-lens.jpg" alt="Canon RF 85mm f/1.2L" />
+                <p>
+                  <strong>Canon RF 85mm f/1.2L</strong><br />
+                  Retratos con bokeh cremoso
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+              <li>
+                <img src="images/premium-lens.jpg" alt="Sony 24–70mm GM II" />
+                <p>
+                  <strong>Sony 24–70mm GM II</strong><br />
+                  Zoom versátil para fotografía profesional
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+              <li>
+                <img
+                  src="images/premium-lens.jpg"
+                  alt="Nikon Z 70–200mm f/2.8"
+                />
+                <p>
+                  <strong>Nikon Z 70–200mm f/2.8</strong><br />
+                  Teleobjetivo rápido y preciso
+                </p>
+                <span class="enlace-local">Página Oficial</span>
+              </li>
+            </ul>
+          </details>
+        </div>
+      </section>
 
       <div>
         <h2 class="titulo-seccion" id="servicios">SERVICIOS</h2>
@@ -107,6 +192,7 @@
           <div class="caja-servicio">SERVICIO 1</div>
           <div class="caja-servicio">SERVICIO 2</div>
           <div class="caja-servicio">SERVICIO 3</div>
+        </div>
       </div>
     </main>
 
@@ -123,5 +209,5 @@
     </footer>
 
     <script src="index.js"></script>
-    </body>
+  </body>
 </html>
