Agrego imagenes, cambios en css para que queden bonitas, cambios en las animaciones de los botones, sombras en las cajas de las imagenes y descripción, cambios de fuentes/Tipografia

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&family=Lunasima:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Funnel+Display:wght@400;700&display=swap"rel="stylesheet"/>
   </head>
 
   <body class="body-general">
@@ -21,7 +18,7 @@
           alt="Lil Abasto Logo"
           class="logo-imagen"
         />
-        <span class="logo-texto">LIL ABASTO</span>
+        <span class="logo-texto">Lil' Abasto</span>
       </div>
     </header>
 
@@ -42,11 +39,14 @@
 
     <main class="main-contenido">
       <div class="contenedor-fotos">
-        <div class="caja-foto">FOTO</div>
-        <div class="caja-foto">FOTO</div>
+        <div class="caja-foto">
+          <img src="Imagenes/abasto_1.png" alt="Vista del flamante patio de comidas">
+        </div>
+        <div class="caja-foto">
+          <img src="Imagenes/abasto_2.png" alt="Vista de uno de los pasillos con negocios del shopping.">
+        </div>
       </div>
       <div class="caja-descripcion">DESCRIPCIÓN</div>
-
       <div>
         <h2 class="titulo-seccion" id="novedades">NOVEDADES</h2>
         <div class="contenedor-novedades">
@@ -62,7 +62,6 @@
           </div>
         </div>
       </div>
-
       <div>
         <h2 class="titulo-seccion" id="promociones">PROMOCIONES</h2>
         <div class="contenedor-promociones">
