Cambios en la imagen del logo, css del titulo para agregar una linea por debajo, para que no quede tan vacío.
Agrego un par de comentarios para mejorar la legibilidad del codigo.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       </div>
     </header>
 
+    <!-- NavBar -->
+
     <nav id="NavBar">
       <div class="opciones-menu">
         <button class="boton-menu" data-seccion="novedades">Novedades</button>
@@ -37,6 +39,8 @@
       </div>
     </nav>
 
+    <!-- Cajas de fotos -->
+
     <main class="main-contenido">
       <div class="contenedor-fotos">
         <div class="caja-foto">
@@ -46,6 +50,9 @@
           <img src="Imagenes/abasto_2.png" alt="Vista de uno de los pasillos con negocios del shopping.">
         </div>
       </div>
+
+      <!-- Caja descripción -->
+
       <div class="caja-descripcion">DESCRIPCIÓN</div>
       <div>
         <h2 class="titulo-seccion" id="novedades">NOVEDADES</h2>
@@ -62,6 +69,9 @@
           </div>
         </div>
       </div>
+
+      <!-- Promociones -->
+
       <div>
         <h2 class="titulo-seccion" id="promociones">PROMOCIONES</h2>
         <div class="contenedor-promociones">
@@ -82,6 +92,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Mapa del Centro Comercial -->
 
       <div>
         <h2 class="titulo-seccion" id="mapa">MAPA DEL CENTRO COMERCIAL</h2>
@@ -108,6 +120,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Locales -->
 
       <section class="catalogo-locales">
         <h2>LOCALES</h2>
@@ -194,6 +208,8 @@
         </div>
       </div>
     </main>
+    
+    <!-- Footer -->
 
     <footer class="footer-principal">
       <div class="info-izquierda">
