--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       <!-- Caja descripción -->
 
       <div class="caja-descripcion">DESCRIPCIÓN</div>
+
+      <!-- Novedades -->
+
       <div>
         <h2 class="titulo-seccion" id="novedades">NOVEDADES</h2>
         <div class="contenedor-novedades">
@@ -123,76 +126,93 @@
 
       <!-- Locales -->
 
-      <section class="catalogo-locales">
-        <h2>LOCALES</h2>
+      <section class="catalogo-locales" id="locales">
+        <h2 class="titulo-seccion">LOCALES</h2>
         <p>Hacé click en un piso para ver los locales disponibles</p>
-        <div class="category-list">
-          <details>
+        <div class="locales-grid">
+
+          <!-- Planta baja -->
+
+          <details open>
             <summary>Planta Baja</summary>
             <ul class="locales-lista">
               <li>
-                <img src="imagen adidas" alt="Local Adidas" />
-                <p>
-                  <strong>Adidas</strong><br />
-                  Planta Baja - Local 230
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
+                <div class="local-info">
+                  <strong>Adidas</strong>
+                  <p>Planta Baja - Local 230</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
+
               <li>
-                <img src="imagen urban style" alt="Local Urban Style" />
-                <p>
-                  <strong>Urban Style</strong><br />
-                  Planta Baja - Local 145
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
+                <div class="local-info">
+                  <strong>Urban Style</strong>
+                  <p>Planta Baja - Local 145</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
+
               <li>
-                <img src="images/camera-setup.jpg" alt="Sony A7 IV" />
-                <p>
-                  <strong>Sony A7 IV</strong><br />
-                  Autofoco avanzado y rendimiento excepcional
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
+                <div class="local-info">
+                  <strong>Dexter</strong>
+                  <p>Planta Baja - Local 212</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
+
               <li>
-                <img src="images/camera-setup.jpg" alt="Fujifilm X-T5" />
-                <p>
-                  <strong>Fujifilm X-T5</strong><br />
-                  Ligera y potente cámara APS-C
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                <div class="local-info">
+                <strong>Columbia Sportswear</strong>
+                <p>Planta Baja - Local 127</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
             </ul>
           </details>
-          <details>
-            <summary>Piso 1</summary>
+
+          <!-- Primer piso -->
+
+          <details open>
+            <summary>Primer Piso</summary>
             <ul class="locales-lista">
               <li>
-                <img src="images/premium-lens.jpg" alt="Canon RF 85mm f/1.2L" />
-                <p>
-                  <strong>Canon RF 85mm f/1.2L</strong><br />
-                  Retratos con bokeh cremoso
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
+                <div class="local-info">
+                  <strong>Adidas</strong>
+                  <p>Planta Baja - Local 230</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
+
               <li>
-                <img src="images/premium-lens.jpg" alt="Sony 24–70mm GM II" />
-                <p>
-                  <strong>Sony 24–70mm GM II</strong><br />
-                  Zoom versátil para fotografía profesional
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
+                <div class="local-info">
+                  <strong>Urban Style</strong>
+                  <p>Planta Baja - Local 145</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
+
               <li>
-                <img
-                  src="images/premium-lens.jpg"
-                  alt="Nikon Z 70–200mm f/2.8"
-                />
-                <p>
-                  <strong>Nikon Z 70–200mm f/2.8</strong><br />
-                  Teleobjetivo rápido y preciso
-                </p>
-                <span class="enlace-local">Página Oficial</span>
+                <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
+                <div class="local-info">
+                  <strong>Dexter</strong>
+                  <p>Planta Baja - Local 212</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
+              </li>
+
+              <li>
+                <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                <div class="local-info">
+                <strong>Columbia Sportswear</strong>
+                <p>Planta Baja - Local 127</p>
+                </div>
+                <a href="#" class="boton-local">Página Oficial</a>
               </li>
             </ul>
           </details>
