Agregué target="_blank" a las url para que los botones abran una pestaña nueva en lugar de redirigir fuera del sitio web.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   <strong>Adidas</strong>
                   <p>Planta Baja - Local 230</p>
                 </div>
-                <a href="https://www.adidas.com.ar/" class="boton-local">Página Oficial</a>
+                <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
               </li>
 
               <li>
@@ -151,7 +151,7 @@
                   <strong>Urban Style</strong>
                   <p>Planta Baja - Local 145</p>
                 </div>
-                <a href="https://urbanstyle.com/" class="boton-local">Página Oficial</a>
+                <a href="https://urbanstyle.com/" class="boton-local" target="_blank">Página Oficial</a>
               </li>
 
               <li>
@@ -160,7 +160,7 @@
                   <strong>Dexter</strong>
                   <p>Planta Baja - Local 212</p>
                 </div>
-                <a href="https://dexter.com.ar/" class="boton-local">Página Oficial</a>
+                <a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
               </li>
 
               <li>
@@ -169,7 +169,7 @@
                 <strong>Columbia Sportswear</strong>
                 <p>Planta Baja - Local 127</p>
                 </div>
-                <a href="https://www.columbiasportswear.com.ar/" class="boton-local">Página Oficial</a>
+                <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
               </li>
             </ul>
           </details>
@@ -185,7 +185,7 @@
                   <strong>Adidas</strong>
                   <p>Planta Baja - Local 230</p>
                 </div>
-                <a href="#" class="boton-local">Página Oficial</a>
+                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
               </li>
 
               <li>
@@ -194,7 +194,7 @@
                   <strong>Urban Style</strong>
                   <p>Planta Baja - Local 145</p>
                 </div>
-                <a href="#" class="boton-local">Página Oficial</a>
+                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
               </li>
 
               <li>
@@ -203,7 +203,7 @@
                   <strong>Dexter</strong>
                   <p>Planta Baja - Local 212</p>
                 </div>
-                <a href="#" class="boton-local">Página Oficial</a>
+                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
               </li>
 
               <li>
@@ -212,7 +212,7 @@
                 <strong>Columbia Sportswear</strong>
                 <p>Planta Baja - Local 127</p>
                 </div>
-                <a href="#" class="boton-local">Página Oficial</a>
+                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
               </li>
             </ul>
           </details>
