Agrego animaciones para despliegue de listas de locales usando javascript, cambio de estructura de los divs anteriores a <ul class="locales-lista">

--- a/index.html
+++ b/index.html
@@ -133,88 +133,92 @@
 
           <!-- Planta baja -->
 
-          <details open>
+          <details>
             <summary>Planta Baja</summary>
-            <ul class="locales-lista">
-              <li>
-                <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
-                <div class="local-info">
-                  <strong>Adidas</strong>
-                  <p>Planta Baja - Local 230</p>
-                </div>
-                <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
+            <div class="details-content">
+              <ul class="locales-lista">
+                <li>
+                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
+                  <div class="local-info">
+                    <strong>Adidas</strong>
+                    <p>Planta Baja - Local 230</p>
+                  </div>
+                  <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
 
-              <li>
-                <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
-                <div class="local-info">
-                  <strong>Urban Style</strong>
-                  <p>Planta Baja - Local 145</p>
-                </div>
-                <a href="https://urbanstyle.com/" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
+                <li>
+                  <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
+                  <div class="local-info">
+                    <strong>Urban Style</strong>
+                    <p>Planta Baja - Local 145</p>
+                  </div>
+                  <a href="https://urbanstyle.com/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
 
-              <li>
-                <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
-                <div class="local-info">
-                  <strong>Dexter</strong>
-                  <p>Planta Baja - Local 212</p>
-                </div>
-                <a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
+                <li>
+                  <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
+                  <div class="local-info">
+                    <strong>Dexter</strong>
+                    <p>Planta Baja - Local 212</p>
+                  </div>
+                  <a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
 
-              <li>
-                <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
-                <div class="local-info">
-                <strong>Columbia Sportswear</strong>
-                <p>Planta Baja - Local 127</p>
-                </div>
-                <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
-            </ul>
+                <li>
+                  <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                  <div class="local-info">
+                  <strong>Columbia Sportswear</strong>
+                  <p>Planta Baja - Local 127</p>
+                  </div>
+                  <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
+              </ul>
+            </div>
           </details>
 
           <!-- Primer piso -->
 
-          <details open>
-            <summary>Primer Piso</summary>
-            <ul class="locales-lista">
-              <li>
-                <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
-                <div class="local-info">
-                  <strong>Adidas</strong>
-                  <p>Planta Baja - Local 230</p>
-                </div>
-                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
+          <details>
+            <summary>Planta Baja</summary>
+            <div class="details-content">
+              <ul class="locales-lista">
+                <li>
+                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
+                  <div class="local-info">
+                    <strong>Adidas</strong>
+                    <p>Planta Baja - Local 230</p>
+                  </div>
+                  <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
 
-              <li>
-                <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
-                <div class="local-info">
-                  <strong>Urban Style</strong>
-                  <p>Planta Baja - Local 145</p>
-                </div>
-                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
+                <li>
+                  <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
+                  <div class="local-info">
+                    <strong>Urban Style</strong>
+                    <p>Planta Baja - Local 145</p>
+                  </div>
+                  <a href="https://urbanstyle.com/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
 
-              <li>
-                <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
-                <div class="local-info">
-                  <strong>Dexter</strong>
-                  <p>Planta Baja - Local 212</p>
-                </div>
-                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
+                <li>
+                  <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
+                  <div class="local-info">
+                    <strong>Dexter</strong>
+                    <p>Planta Baja - Local 212</p>
+                  </div>
+                  <a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
 
-              <li>
-                <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
-                <div class="local-info">
-                <strong>Columbia Sportswear</strong>
-                <p>Planta Baja - Local 127</p>
-                </div>
-                <a href="#" class="boton-local" target="_blank">Página Oficial</a>
-              </li>
-            </ul>
+                <li>
+                  <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                  <div class="local-info">
+                  <strong>Columbia Sportswear</strong>
+                  <p>Planta Baja - Local 127</p>
+                  </div>
+                  <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                </li>
+              </ul>
+            </div>
           </details>
         </div>
       </section>
