prueba de commit desde vsc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Funnel+Display:wght@400;700&display=swap"rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Funnel+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="body-general">
@@ -44,10 +47,16 @@
     <main class="main-contenido">
       <div class="contenedor-fotos">
         <div class="caja-foto">
-          <img src="Imagenes/abasto_1.png" alt="Vista del flamante patio de comidas">
+          <img
+            src="Imagenes/abasto_1.png"
+            alt="Vista del flamante patio de comidas"
+          />
         </div>
         <div class="caja-foto">
-          <img src="Imagenes/abasto_2.png" alt="Vista de uno de los pasillos con negocios del shopping.">
+          <img
+            src="Imagenes/abasto_2.png"
+            alt="Vista de uno de los pasillos con negocios del shopping."
+          />
         </div>
       </div>
 
@@ -130,7 +139,6 @@
         <h2 class="titulo-seccion">LOCALES</h2>
         <p>Hacé click en un piso para ver los locales disponibles</p>
         <div class="locales-grid">
-
           <!-- Planta baja -->
 
           <details>
@@ -138,21 +146,34 @@
             <div class="details-content">
               <ul class="locales-lista">
                 <li>
-                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
+                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" />
                   <div class="local-info">
                     <strong>Adidas</strong>
                     <p>Planta Baja - Local 230</p>
                   </div>
-                  <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://www.adidas.com.ar/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
 
                 <li>
-                  <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
+                  <img
+                    src="Imagenes/urban_style_logo.jpg"
+                    alt="Logo de Urban Style"
+                  />
                   <div class="local-info">
                     <strong>Urban Style</strong>
                     <p>Planta Baja - Local 145</p>
                   </div>
-                  <a href="https://urbanstyle.com/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://urbanstyle.com/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
 
                 <li>
@@ -161,16 +182,29 @@
                     <strong>Dexter</strong>
                     <p>Planta Baja - Local 212</p>
                   </div>
-                  <a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://dexter.com.ar/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
 
                 <li>
-                  <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                  <img
+                    src="Imagenes/columbia_logo.png"
+                    alt="Logo de Columbia"
+                  />
                   <div class="local-info">
-                  <strong>Columbia Sportswear</strong>
-                  <p>Planta Baja - Local 127</p>
+                    <strong>Columbia Sportswear</strong>
+                    <p>Planta Baja - Local 127</p>
                   </div>
-                  <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://www.columbiasportswear.com.ar/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
               </ul>
             </div>
@@ -179,25 +213,38 @@
           <!-- Primer piso -->
 
           <details>
-            <summary>Planta Baja</summary>
+            <summary>Primer Piso</summary>
             <div class="details-content">
               <ul class="locales-lista">
                 <li>
-                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas"/>
+                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" />
                   <div class="local-info">
                     <strong>Adidas</strong>
                     <p>Planta Baja - Local 230</p>
                   </div>
-                  <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://www.adidas.com.ar/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
 
                 <li>
-                  <img src="Imagenes/urban_style_logo.jpg" alt="Logo de Urban Style" />
+                  <img
+                    src="Imagenes/urban_style_logo.jpg"
+                    alt="Logo de Urban Style"
+                  />
                   <div class="local-info">
                     <strong>Urban Style</strong>
                     <p>Planta Baja - Local 145</p>
                   </div>
-                  <a href="https://urbanstyle.com/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://urbanstyle.com/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
 
                 <li>
@@ -206,16 +253,29 @@
                     <strong>Dexter</strong>
                     <p>Planta Baja - Local 212</p>
                   </div>
-                  <a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://dexter.com.ar/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
 
                 <li>
-                  <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                  <img
+                    src="Imagenes/columbia_logo.png"
+                    alt="Logo de Columbia"
+                  />
                   <div class="local-info">
-                  <strong>Columbia Sportswear</strong>
-                  <p>Planta Baja - Local 127</p>
+                    <strong>Columbia Sportswear</strong>
+                    <p>Planta Baja - Local 127</p>
                   </div>
-                  <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+                  <a
+                    href="https://www.columbiasportswear.com.ar/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
                 </li>
               </ul>
             </div>
@@ -232,7 +292,7 @@
         </div>
       </div>
     </main>
-    
+
     <!-- Footer -->
 
     <footer class="footer-principal">
