Commit VSC parte 2

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" />
                   <div class="local-info">
                     <strong>Adidas</strong>
-                    <p>Planta Baja - Local 230</p>
+                    <p>Primer Piso - Local 230</p>
                   </div>
                   <a
                     href="https://www.adidas.com.ar/"
@@ -237,7 +237,7 @@
                   />
                   <div class="local-info">
                     <strong>Urban Style</strong>
-                    <p>Planta Baja - Local 145</p>
+                    <p>Primer Piso - Local 145</p>
                   </div>
                   <a
                     href="https://urbanstyle.com/"
@@ -251,7 +251,7 @@
                   <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
                   <div class="local-info">
                     <strong>Dexter</strong>
-                    <p>Planta Baja - Local 212</p>
+                    <p>Primer Piso - Local 212</p>
                   </div>
                   <a
                     href="https://dexter.com.ar/"
@@ -268,7 +268,7 @@
                   />
                   <div class="local-info">
                     <strong>Columbia Sportswear</strong>
-                    <p>Planta Baja - Local 127</p>
+                    <p>Primer Piso - Local 127</p>
                   </div>
                   <a
                     href="https://www.columbiasportswear.com.ar/"
