--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header-principal">
       <div class="logo-contenedor">
         <img
-          src="Imagenes/lil_abasto_logo.png"
+          src="Imagenes/Lilabasto_logo.jpeg"
           alt="Lil Abasto Logo"
           class="logo-imagen"
         />
