Agrego logos, titulos y enlaces de cada pagina usando nuestros comercios

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" />
                   <div class="local-info">
                     <strong>Adidas</strong>
-                    <p>Planta Baja - Local 230</p>
+                    <p>Planta Baja - Local 130</p>
                   </div>
                   <a
                     href="https://www.adidas.com.ar/"
@@ -160,16 +160,13 @@
                 </li>
 
                 <li>
-                  <img
-                    src="Imagenes/urban_style_logo.jpg"
-                    alt="Logo de Urban Style"
-                  />
+                  <img src="Imagenes/Logo-US.png" alt="Logo de Urban Style" />
                   <div class="local-info">
                     <strong>Urban Style</strong>
                     <p>Planta Baja - Local 145</p>
                   </div>
                   <a
-                    href="https://urbanstyle.com/"
+                    href="https://fedesorii.github.io/DyDW-TP-UrbanStyle/"
                     class="boton-local"
                     target="_blank"
                     >Página Oficial</a
@@ -180,7 +177,7 @@
                   <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
                   <div class="local-info">
                     <strong>Dexter</strong>
-                    <p>Planta Baja - Local 212</p>
+                    <p>Planta Baja - Local 112</p>
                   </div>
                   <a
                     href="https://dexter.com.ar/"
@@ -217,13 +214,30 @@
             <div class="details-content">
               <ul class="locales-lista">
                 <li>
-                  <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" />
+                  <img
+                    src="Imagenes/FundaLab_Logo.jpg"
+                    alt="Logo de FundaLab"
+                  />
                   <div class="local-info">
-                    <strong>Adidas</strong>
-                    <p>Primer Piso - Local 230</p>
+                    <strong>FundaLab</strong>
+                    <p>Primer Piso - Local 216</p>
                   </div>
                   <a
-                    href="https://www.adidas.com.ar/"
+                    href="https://eitangrod.github.io/Local-comercial/"
+                    class="boton-local"
+                    target="_blank"
+                    >Página Oficial</a
+                  >
+                </li>
+
+                <li>
+                  <img src="Imagenes/Timora_Logo.jpg" alt="Logo de Timora" />
+                  <div class="local-info">
+                    <strong>Timora</strong>
+                    <p>Primer Piso - Local 268</p>
+                  </div>
+                  <a
+                    href="https://dsket.github.io/Timora/index.html"
                     class="boton-local"
                     target="_blank"
                     >Página Oficial</a
@@ -232,29 +246,15 @@
 
                 <li>
                   <img
-                    src="Imagenes/urban_style_logo.jpg"
-                    alt="Logo de Urban Style"
+                    src="Imagenes/Foto-Grafia_Logo.jpg"
+                    alt="Logo de Foto-Grafia"
                   />
                   <div class="local-info">
-                    <strong>Urban Style</strong>
-                    <p>Primer Piso - Local 145</p>
+                    <strong>Foto-Grafia</strong>
+                    <p>Primer Piso - Local 231</p>
                   </div>
                   <a
-                    href="https://urbanstyle.com/"
-                    class="boton-local"
-                    target="_blank"
-                    >Página Oficial</a
-                  >
-                </li>
-
-                <li>
-                  <img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" />
-                  <div class="local-info">
-                    <strong>Dexter</strong>
-                    <p>Primer Piso - Local 212</p>
-                  </div>
-                  <a
-                    href="https://dexter.com.ar/"
+                    href="https://awpii.github.io/WebDesign_UADE/"
                     class="boton-local"
                     target="_blank"
                     >Página Oficial</a
@@ -263,15 +263,15 @@
 
                 <li>
                   <img
-                    src="Imagenes/columbia_logo.png"
-                    alt="Logo de Columbia"
+                    src="Imagenes/TecnoGReal_Logo2.jpg"
+                    alt="Logo de Tecno G Real"
                   />
                   <div class="local-info">
-                    <strong>Columbia Sportswear</strong>
-                    <p>Primer Piso - Local 127</p>
+                    <strong>Tecno G Real</strong>
+                    <p>Primer Piso - Local 247</p>
                   </div>
                   <a
-                    href="https://www.columbiasportswear.com.ar/"
+                    href="http://manugallina014.github.io/TPparcialDise-oWeb/"
                     class="boton-local"
                     target="_blank"
                     >Página Oficial</a
